style.css
@font-face{
  font-family: 'Lato';
  src: url('assets/fonts/Lato-Black.ttf')  format('truetype');
  font-weight: 900;
}
@font-face{
  font-family: 'Lato';
  src: url('assets/fonts/Lato-Light.ttf')  format('truetype');
  font-weight: 600;
}

@font-face{
  font-family: 'Lato';
  src: url('assets/fonts/Lato-Regular.ttf')  format('truetype');
  font-weight: 400;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Lato', sans-serif;
  list-style: none;
  text-decoration: none;
  line-height: 1.2;
}

html {
  font-size: 10px;
}

body {
  width: 100%;

}

.content {
  width: 1020px;
  margin: 0 auto;
  position: relative;
}

.h-ident-30{
  padding: 0 30px;
}

header {
  width: 100%;
  height: 90px;
  display: flex;
  justify-content:space-between;
  align-items: center;
  background-color: #2d303a;

}

header h1{
  padding-left: 10px;
  font-size: 2.5rem;
  letter-spacing: -0.6px;
  color: #ffffff;
}

header h1:after{
  content: "*";
  color: #dc655f;
}

header h1 a:hover{
  color: #dc655f;
}

header ul.header_links {
  padding-top: 6px;
  display: flex;
  justify-content: space-between;
  text-transform: uppercase;
  align-items: center;
  color: #ffffff;
  font-size: 1.2rem;
  font-weight: bold;
}

header ul.header_links li{
  position: relative;
  margin:3px 14.9px 0;
  line-height: 1.5;
  letter-spacing: -0.3px;
  color: #ffffff;
}

header ul.header_links li:not(:first-child):before {
  content: "·";
  color: #494e62;
  margin-left: -16px;
  position: absolute;
}

header a{
  color: #ffffff;
}
header a:hover{
  color: #dc655f;
}

header a.active{
  color: #dc655f;
}

.header_line {
  width: 100%;
  height: 6px;
  background-color: #323746;
}

/* slider */
.img-slider {
  height: 594px; 
  background: #f06c64;
  position: relative;
  box-shadow: 0 6px #ea676b;
}

.blue{
  background: #648bf0;
  box-shadow: 0 6px #5783f3;
}

.btn_prev, .btn_next {
  position: absolute; 
  top: 280px;
  z-index: 90;
}

.btn_prev:hover, 
.btn_next:hover {
  cursor: pointer;
}

.btn_prev{
  left: 43px;    
}

.btn_next{
  right: 42px;    
}

.slider {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  padding: 53px 10px 60px;
  position: relative;
}

.images, 
.images.vertical{
  display: block;
  background: url(assets/phone_bg1.png) no-repeat;
  background-position: 0 -70px;
  margin: 0 72px;
  margin-top: -1px;
   border-radius: 27px; 
  box-shadow: 25px 25px #ce5d56, 10px 10px #ce5d56, 14px 14px #ce5d56, 20px 20px #ce5d56;
}

.images.horizontal {
  background: url(assets/phone_bg2.png) no-repeat;
  background-position: -105px -56px;
  margin-top: -3px;
  margin-left: 148px;
  transform: rotateZ(90deg);
  box-shadow: 25px -25px #ce5d56, 10px -10px #ce5d56, 14px -14px #ce5d56, 20px -20px #ce5d56;
}
.image-slider2{
  margin: 0 auto 0;
}
.screen-black{
  background: #000 !important;
}


/*services*/
.services{
  height: 494px;
  padding: 61px 30px 0 40px;
  background: #f2f2f2;
}

.services h2 {
  color: #666d89;
  font-size: 3rem;
  font-weight: 900;
  letter-spacing: 0.12px;
  line-height: 1;   
}

.services .about_text{
  margin-top: 21px;
  padding-right: 10px;
  color: #767e9e;
  font-size: 1.8rem;
  font-weight: 300;
  line-height: 30px;
  text-align: justify;
  letter-spacing: -0.3px;
}

.service_list {
  margin-top: 45px;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  flex-wrap: wrap;
}

.service {
  width: 310px;
  padding-bottom: 30px;    
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.service_icon {
   margin-top: 2px; 
  margin-right: 10px;
  margin-left: 1px;
}

.services:hover{
  cursor: pointer;
}

.service:hover .service_icon {
  background-color: #918c8b3f;
  border-radius: 50%;
}

.service_description {
  margin-left: 10px;
  margin-right: 10px;
}

.service_title {
  padding-top:2px;
  font-size: 1.8rem;
  font-weight: 900;
  line-height: 17.86px;
  letter-spacing: 0.22px;
  color: #666d89;
}

.service_text {
  padding-top: 9px;
  font-size: 1.2rem;
  font-weight: 400;
  text-align: justify;
  word-wrap: break-word;
  word-break: break-all;
  hyphens: auto;
  line-height: 21.56px;
  letter-spacing: 0.55px;
  color: #767e9e;
  overflow: hidden;
}

.services_line {
  width: 100%;
  height: 6px;
  background-color: #ffffff;
}

/*portfolio*/
.portfolio {
  height: 870px;
  background-color: #2d303a;
  box-shadow: 0 6px #323746;

}
.portfolio__title{
  padding: 60px 0 0 10px;
}
.portfolio h2 {
  font-size: 3rem;
  font-weight: 900;
  color: #666d89;
  letter-spacing: 0.3px;
  line-height: 1;
}

.portfolio p {
  width: 100%;
  /* margin-top: 22px; */
  font-size: 1.8rem;
  padding: 22px 0 0 10px;
  color: #666d89;  
  letter-spacing: -0.23px;    
  line-height: 1.7;
}

.filter {
  padding-top: 10px;
  padding-left:10px;
  display: flex;
  justify-content: flex-start;
}

.f_button{
  font-size: 1.2rem;
  letter-spacing: 0.1px; 
  line-height: 0.9;
  color: #767e9e;
  border: 2px solid #666d89;
  border-radius: 5px;
  padding: 5px 5.1px;
  margin-right: 9px;
}

.f_button:hover {
  cursor: pointer;
  color: #dedede;
  border-color: #dedede;
}

.filter .active {
  border-color: #dedede;
  color: #dedede;
}

.portfolio_images {
  height: 620px;
  padding: 15px 0 15px 0;
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}
  .portfolio_image img.active{
    border: 5px solid #F06C64;
    width: calc(100% - 10px);
    height: calc(100% - 10px);
  }

.portfolio_image{
  padding-bottom: 20px;
  /* padding:20px 5px 5px 0; */
  /* margin: 0 20px 18px 0; */
  
}
.portfolio_image:hover{
  transform: scale(1.07);
}

/*about us*/
.about_us {
  height: 731px;
  background-color: #f2f2f2;
  padding: 60px 20px 30px 40px;
  box-shadow: 0 6px #ffffff;

}
.about_us h2 {
  font-size: 3rem;
  font-weight: 900;
  color: #666d89;
  letter-spacing: 0.3px;
  line-height: 1;
}

.about_us p {
  width: 100%;
  margin-top: 20px;
  font-size: 1.8rem;
  font-weight: 300;
  color: #767e9e;  
  letter-spacing: -0.075px;    
  line-height: 1.7;
}

.person_list{
  margin-top: 45px;
  display: flex;
  justify-content: flex-start;
}

.person{
  width: 300px;
  margin-right:20px;
}

.person_info h3{
  width: 100%;
  margin-top: 14px;
  font-family: 'Lato';
  font-size: 1.8rem;
  font-weight: 900;
  letter-spacing: 0.15px; 
  color: #666d89;
  white-space: nowrap;
  overflow: hidden;
}

.person_info p{
  margin-top: 10px;
  font-weight: 400;
  font-size: 1.2rem;
  text-align: justify;    
  color:#767e9e;
  letter-spacing: -0.06px;
}

.person_sotial {
  margin-top: 25px;
  display: flex;
}
.person_sotial a{
  display: flex;
  width: 32px;
  height: 32px;
  border: 1px solid #6a718c;
  border-radius: 50%;
  margin-right: 8.1px;
}

.person_sotial a:hover{
  cursor: pointer;
  border: 1px solid #163cd4;
  background-color: #ec920a;
}

.person_sotial .sotial{
  margin: 8px 4.9px 8.5px 5px;
  width: 100%;
  display: flex;
  background-size: contain;

}

.facebook{
  background: url(assets/facebook.svg) no-repeat center; 
}

.google{
  background: url(assets/google+.svg) no-repeat center; 
}

.twitter{
  background: url(assets/twitter.svg) no-repeat center; 
}

.linkedin{
  background: url(assets/linkedin.svg) no-repeat center; 
}

/*quote*/
.quote {
  height: 655px;
  background-color: #f06c64;
  padding: 63px 20px 30px 40px;
  box-shadow: 0 6px #ea676b;
  position: relative;
}

.quote h2 {
  font-size: 3rem;
  font-weight: 900;
  color: #f0d8d9;
  letter-spacing: 0.09px;
  line-height: 1;
}

.quote p {
  width: 100%;
  padding-top: 21px;
  font-size: 1.8rem;
  color: #f0d8d9;  
  letter-spacing: -0.22px;    
  line-height: 31px;
  padding-right: 20px;
  text-align: justify;
}

.contacts-us {
  display: inline-flex;
}

.col-8 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: calc(100% / 12 * 8);
  padding: 44px 20px 0 0;
}

.col-8 input {
  margin-bottom: 15.85px;
  line-height: 3.185;
  padding-left: 14.5px;
}

.col-8 textarea {
  height: 200px;
  padding-top: 10.8px;
  padding-left: 14.5px;
}

.col-8 input,
.col-8 textarea {
  border: none;
  color: #f48c8f;
  background-color: #d6564f;
  border-radius: 5px;
  border-color: #d6564f;
  font-size: 1.2rem;
  font-weight: 400;
}

.col-8 input::placeholder,
.col-8 textarea::placeholder {
  color: #f48c8f;
}

.btn-send{
  margin-top: 15px;
  width: 200px;
}

.btn-send:hover{
  cursor: pointer;
  border: 1px solid #ffffff;
  color:#ffffff;
  box-shadow: 1px 1px 2px black, 0 0 1em red;
}

.col-4{
  display: flex;
  flex-direction: column;
  width: calc(100% / 12 * 4);
   padding: 44px 0px 0 0;  
}

.contact-info {
  color:#f0d8d9;
  text-decoration: none;
}

.contact-info h3 {
  font-size: 1.8rem;
  line-height: 17.86px;
  font-weight: 900;
  letter-spacing: 0.2px;
}

.contact-info p {
  padding-top: 10px;
  font-size: 1.2rem;
  font-weight: 400;  
  line-height: 21.9px;
  letter-spacing: -0.12px; 
  text-align: justify;
  hyphens: manual;
  -moz-hyphens: manual;
  -webkit-hyphens: manual;
  -ms-hyphens: manual;
}

.contacts {
  padding-top: 22px;
  display: flex;
  flex-direction: column;
}

.contact {
  display: flex;
  margin-bottom: 1.3px; 
  padding: 0 auto 10px 0;
  font-size: 1.2rem;
  font-weight: 400;  
  line-height: 19px;
  letter-spacing: 0.09px;
}

.contact a{
  margin-top: 2px;
  text-decoration: none;
  color: #f0d8d9;
}

.contact a:last-child{
  margin-top: 5px;
}

.contact a:hover{
  margin-top: 5px;
  text-shadow: 1px 1px 2px black, 0 0 1em red;
  text-decoration: underline;
}

.ico{
  margin-top: 4px;
  margin-left: px;
  display: inline-flex;
  width: 13px;
  height: 13px;
  margin-right: 9px;
  padding: 2px auto 12px 5px; 
}

.ico-location{
  background: url(assets/ico-location.svg) no-repeat center; 
}

.ico-phone{
  background: url(assets/ico-phone.svg) no-repeat center; 
}

.ico-email{
  background: url(assets/ico-mail.svg) no-repeat center; 
}
/*footer*/
.footer {
  height: 70px;
  background-color: #2d303a;
  box-shadow: 0 6px #2d303a;

}

.footer_info {
  display: flex;
  justify-content: space-between;
}

.footer_info p{
  padding-top: 26px;
  padding-left: 12px;
  font-size: 1.2rem;
  font-weight: 400;  
  line-height: 21.55px;
  letter-spacing: -0.12px;  
  color:#6a718c; 
}

.footer_sotial {
  padding: 0 2px 0 3px;
  margin-top: 21px;
  display: flex;
 }

.footer_sotial a{
  display: flex;
  width: 32px;
  height: 32px;
  border: 1px solid #6a718c;
  border-radius: 50%;
  margin-right: 8.1px;
}

.footer_sotial a:hover{
  cursor: pointer;
  border: 1px solid #163cd4;
  background-color: #ec920a;
}

.footer_sotial .sotial{
  margin: 8px 4.9px 8.5px 5px;
  width: 100%;
  display: flex;
  background-size: contain;
}

#message-form{
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: #767e9e88;
}
#message-form.hidden {
  display: none;
}
#message{
  position: absolute;
  top: calc( (100% - 500px) / 2);
  left: calc( (100% - 500px) / 2);
  padding: 20px;
  width: 500px;
  height: 500px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;
  background: #6d6b69;
  border: 5px solid #2b2c2e;
  border-radius: 20px;
  text-align: center;

}
#message .detail {
  font-size: 20px;
  text-align: left;
}

#message .btn-close{
  width: 100px;
  height: 40px;
  border-radius: 5px;
  background: #ca5b5b;
}

#message .btn-close:hover{
  background: #787a77;
  border: 2px solid #444555
}

